# FiniteFieldsLib

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
FiniteFields/: CMakeLists.txt  FiniteField.hpp  FiniteFieldElement.hpp  InvalidFieldException.h  Polynomial.hpp  PrimeField.h  PrimeFieldElement.hpp
gtest/: CMakeLists.txt  FiniteFieldElementTest.cpp  PolynomialTest.cpp  PrimeFieldElementTest.cpp
